# typedlua-typechecker

./: .gitignore  Cargo.toml  README.md  profile_runner.long-type-422261660292093954.txt  tarpaulin-report.html  tarpaulin-report.json
benches/: generics.rs  type_checking.rs
docs/: PERFORMANCE_REPORT.md  architecture-changes.md  implementation-status.md  refactoring-progress.md
src/: config.rs  diagnostics.rs  errors.rs  fs.rs  generics.rs  incremental.rs  lib.rs  narrowing.rs  narrowing_integration.rs  symbol_table.rs  symbol_table_tests.rs  tests.rs  type_checker.rs  type_compat.rs  type_environment.rs  utility_types.rs
src/cli/: config.rs
src/core/: context.rs  type_checker.rs  type_compat.rs  type_environment.rs
src/di/: container.rs  error.rs  mod.rs
src/di/tests/: container_tests.rs  error_tests.rs  integration_tests.rs  mod.rs
src/helpers/: control_flow.rs  mod.rs  type_utilities.rs
src/module_resolver/: dependency_graph.rs  error.rs  mod.rs  path_aliases.rs  registry.rs
src/phases/: declaration_checking_phase.rs  declaration_phase.rs  inference_phase.rs  mod.rs  module_phase.rs  validation_phase.rs
src/state/: metrics.rs  mod.rs  type_checker_state.rs
src/stdlib/: README.md  builtins.d.tl  lua51.d.tl  lua52.d.tl  lua53.d.tl  lua54.d.tl  mod.rs  reflection.d.tl
src/test_utils/: integration_tests.rs  mocks.rs  mod.rs  module_tests.rs  simple_di_test.rs  working_di_test.rs
src/types/: generics.rs  utility_types.rs
src/utils/: fuzzy.rs  symbol_table.rs  type_formatter.rs  type_suggestions.rs
src/visitors/: access_control.rs  inference.rs  mod.rs  narrowing.rs
src/visitors/access_control/: access_control_tests.rs
src/visitors/inference/: inference_tests.rs
tests/: assert_type_tests.rs  coverage_tests.rs  did_you_mean_tests.rs  incremental_tests.rs  test_utils.rs  type_checking_tests.rs
