[package]
name = "typedlua-typechecker"
version = "0.1.0"
edition = "2021"
authors = ["forge18"]
description = "Type checker for TypedLua"
repository = "https://github.com/forge18/typedlua-typechecker"
license = "MIT"

[dependencies]
typedlua-parser = { path = "../typedlua-parser" }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
