[package]
name = "luanext-typechecker"
version = "0.1.0"
edition = "2021"
authors = ["LuaNext Contributors"]
description = "Type checker for LuaNext"
repository = "https://github.com/forge18/luanext-typechecker"
license = "MIT"

[dependencies]
luanext-parser = { git = "https://github.com/forge18/luanext-parser.git" }
bumpalo = "3.16"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lru = "0.12"

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "type_checking"
harness = false

[[bench]]
name = "generics"
harness = false

[[bin]]
name = "profiler"
path = "src/bin/profiler.rs"
